# thebe-rs

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  skills-lock.json  stupid.trs
.agents/skills/rust-mcp-server-generator/: SKILL.md
benchmarks/fixtures/: README.md
benchmarks/fixtures/next-counter/: package-lock.json  package.json
benchmarks/fixtures/next-counter/app/: CounterClient.jsx  layout.jsx  page.jsx
benchmarks/fixtures/next-counter/app/api/counter/decrement/: route.js
benchmarks/fixtures/next-counter/app/api/counter/increment/: route.js
benchmarks/fixtures/next-counter/app/api/counter/reset/: route.js
benchmarks/fixtures/nuxt-counter/: nuxt.config.ts  package-lock.json  package.json
benchmarks/fixtures/nuxt-counter/pages/: index.vue
benchmarks/fixtures/nuxt-counter/server/api/counter/: current.get.ts  decrement.post.ts  increment.post.ts  reset.post.ts
benchmarks/fixtures/solidstart-counter/: package-lock.json  package.json
benchmarks/fixtures/solidstart-counter/src/: app.css  entry-client.tsx  entry-server.tsx
benchmarks/fixtures/solidstart-counter/src/lib/: counter.ts
benchmarks/fixtures/solidstart-counter/src/routes/: index.tsx
benchmarks/fixtures/solidstart-counter/src/routes/api/counter/: current.ts  decrement.ts  increment.ts  reset.ts
benchmarks/fixtures/sveltekit-counter/: package-lock.json  package.json
benchmarks/fixtures/sveltekit-counter/src/routes/: +page.server.js  +page.svelte
benchmarks/fixtures/sveltekit-counter/src/routes/api/counter/current/: +server.js
benchmarks/fixtures/sveltekit-counter/src/routes/api/counter/decrement/: +server.js
benchmarks/fixtures/sveltekit-counter/src/routes/api/counter/increment/: +server.js
benchmarks/fixtures/sveltekit-counter/src/routes/api/counter/reset/: +server.js
benchmarks/results/: latest-matrix.html
crates/thebe-analyzer/: Cargo.toml
crates/thebe-analyzer/src/: error.rs  extract.rs  lib.rs  strip.rs
crates/thebe-cli/: Cargo.toml
crates/thebe-cli/src/: main.rs  tailwind.rs
crates/thebe-cli/src/commands/: dev.rs  dev_command.rs  mod.rs  new.rs
crates/thebe-cli/src/hotpatch/: browser.rs  classify.rs  mod.rs  orchestrator.rs  runtime.rs  session.rs
crates/thebe-cli/tests/: hotpatch_style_event.rs
crates/thebe-codegen/: Cargo.toml
crates/thebe-codegen/scripts/: runtime.js
crates/thebe-codegen/src/: error.rs  generator.rs  lib.rs  template.rs
crates/thebe-css/: Cargo.toml
crates/thebe-css/src/: error.rs  lib.rs
crates/thebe-lsp/: Cargo.toml
crates/thebe-lsp/src/: lib.rs  main.rs  typescript_bridge.js
crates/thebe-parser/: Cargo.toml
crates/thebe-parser/src/: error.rs  lib.rs  tokenizer.rs
crates/thebe-project/: Cargo.toml
crates/thebe-project/src/: config.rs  lib.rs
crates/thebe-runtime/: Cargo.toml
crates/thebe-runtime/src/: error.rs  hotpatch.rs  lib.rs  render.rs  shell.rs
docs/: architecture.md  components.md  configuration.md  editor-tooling.md  forms-and-mutations.md  hotpatch-engine.md  hydration.md  performance.md  routing-and-handlers.md  state-and-reactivity.md  status.md  syntax-and-semantics.md
examples/counter-app/: .gitignore  Cargo.toml  app.html  thebe.toml
examples/counter-app/public/: global.css
examples/counter-app/src/: input.css  main.rs
examples/counter-app/src/components/: StatCard.trs
examples/counter-app/src/routes/: _layout.trs  about.trs  auth.trs  index.trs  profile.trs
scripts/perf/: package-lock.json  package.json  run.cjs  targets.cjs
