[workspace]
resolver = "3"
members = [
  "crates/thebe-parser",
  "crates/thebe-analyzer",
  "crates/thebe-codegen",
  "crates/thebe-runtime",
  "crates/thebe-cli",
]
default-members = ["crates/thebe-cli"]
exclude = ["examples/counter-app"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde_json = "1"

[workspace.lints]
clippy = { pedantic = "warn" }
