[workspace]
resolver = "3"
members = [
  "crates/thebe-parser",
  "crates/thebe-analyzer",
  "crates/thebe-codegen",
  "crates/thebe-css",
  "crates/thebe-runtime",
  "crates/thebe-project",
  "crates/thebe-cli",
  "crates/thebe-lsp",
]
default-members = ["crates/thebe-cli"]
exclude = ["examples/counter-app"]

[workspace.package]
version = "0.0.1"
authors = ["Alessio Marchi <alessio.marchi@proton.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kettei-sproutty/thebe-rs"
description = "A compiler-driven full-stack Rust web framework using Single File Components"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde_json = "1"

[workspace.lints]
clippy = { pedantic = "warn" }
