[package]
name = "thebe-analyzer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
thiserror = { workspace = true }
swc_common = { version = "21.0.1", features = ["sourcemap"] }
swc_ecma_ast = "23.0.0"
swc_ecma_codegen = "26.0.1"
swc_ecma_minifier = "52.0.0"
swc_ecma_parser = { version = "38.0.1", default-features = false, features = ["typescript"] }
swc_ts_fast_strip = "48.0.0"

[lints]
workspace = true
