[package]
name = "thebe-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "thebe"
path = "src/main.rs"

[dependencies]
thebe-project = { path = "../thebe-project" }
thebe-codegen = { path = "../thebe-codegen" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify = "6"

[lints]
workspace = true
