[package]
name = "thebe-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
[[bin]]
name = "thebe"
path = "src/main.rs"

[dependencies]
thebe-project = { path = "../thebe-project", version = "0.0.1" }
thebe-codegen = { path = "../thebe-codegen", version = "0.0.1" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify = "6"

[lints]
workspace = true
