[package]
name = "thebe-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
[[bin]]
name = "thebe"
path = "src/main.rs"

[dependencies]
thebe-project = { path = "../thebe-project", version = "0.0.1" }
thebe-codegen = { path = "../thebe-codegen", version = "0.0.1" }
thebe-runtime = { path = "../thebe-runtime", version = "0.0.1" }
thebe-parser = { path = "../thebe-parser", version = "0.0.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
notify = "6"
reqwest = { version = "0.13.2", features = ["blocking"] }
directories = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
ctrlc = "3"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
serde_json = { workspace = true }

[lints]
workspace = true
