[package]
name = "thebe-codegen"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
[dependencies]
thebe-parser = { path = "../thebe-parser", version = "0.0.1" }
thebe-analyzer = { path = "../thebe-analyzer", version = "0.0.1" }
thebe-css = { path = "../thebe-css", version = "0.0.1" }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = { workspace = true }

[lints]
workspace = true
