[package]
name = "thebe-css"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
[dependencies]
lightningcss = { version = "1.0.0-alpha.71", features = ["visitor"] }
thiserror = { workspace = true }

[lints]
workspace = true
