[package]
name = "thebe-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "thebe-lsp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20"

[lints]
workspace = true
