[package]
name = "thebe-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "thebe-lsp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thebe-project = { path = "../thebe-project" }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "time"] }
tower-lsp = "0.20"

[lints]
workspace = true
