[package]
name = "thebe-lsp"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
[[bin]]
name = "thebe-lsp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thebe-analyzer = { path = "../thebe-analyzer", version = "0.0.1" }
thebe-css = { path = "../thebe-css", version = "0.0.1" }
thebe-codegen = { path = "../thebe-codegen", version = "0.0.1" }
thebe-parser = { path = "../thebe-parser", version = "0.0.1" }
thebe-project = { path = "../thebe-project", version = "0.0.1" }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "time"] }
tower-lsp = "0.20"

[lints]
workspace = true
