[package]
name = "thebe-project"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thebe-codegen = { path = "../thebe-codegen", version = "0.0.1" }
thebe-parser = { path = "../thebe-parser", version = "0.0.1" }
walkdir = "2"

[lints]
workspace = true
