[package]
name = "thebe-runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
[dependencies]
minijinja = "2"
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
