[package]
name = "counter-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thebe-runtime = { path = "../../crates/thebe-runtime" }
ts-rs = "12"

